--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@
 body {
     margin:0px;
     width:100%;
+    
 }
 
 header {
@@ -12,6 +13,7 @@ header {
     display:flex;
     flex-direction:row;
     height:120px;
+    margin-bottom:0px;
 }
 
 .headerlogo {
