--- a/css/forms.css
+++ b/css/forms.css
@@ -1,4 +1,5 @@
 
+
 .submitbtn {
     background-color:orange;
     border: 1px solid orange;
@@ -21,42 +22,69 @@
 
 } 
 
-
 .mainliens {
     text-decoration: none;
     color: orange;
     font-size:20px;
 }
 
+
 .styleform {
     margin-bottom:5%;
+    
 
     
+}
+
+.styleform input[type='submit'] {
+    background-color:orange;
+    border: 1px solid orange;
+    padding:4px;
+    color:black;
+    transition: all 0.5s ease;
+    border-radius:10px;
+    height: 50px;
+    width:140px;
+    font-family: Abril Fatface;
+    font-weight: 500;
+    font-size:20px;
+    margin-top:15px;
+}
+
+.styleform input[type='submit']:hover{
+    background-color:black;
+    color: orange;
+
 }
 
 .styleform input{
     display: block;
     margin-bottom: 10px;
     text-align: center;
-    margin:auto;
     margin-top:5px;
-    margin-bottom:5px;
-    width:30%;
-    height:6%;
+    margin-bottom:10px;
+    height:40px;
+    width:220px;
+    font-family: Abril Fatface;
+    background-color:rgb(187, 255, 156);
+    border-radius:15%;
+    font-size:15px;
+    border-color:orange;
    
 }
 
 .inputbasic {
-    border: 1px solid grey;
+    border: 1px solid black;
     border-radius: 3px;
-    padding: 3px;
+    padding: 2px;
     transition: all 0.5s ease ;
     font-family:'Exo 2';
     font-weight: 600;
-    font-size:18px;
+    
 
 }
 
 .inputbasic:focus {
     background-color:rgba(70, 227, 190);
+}
     
