COMMENTAIRE => CSS OK

--- a/css/profil.css
+++ b/css/profil.css
@@ -1,10 +1,11 @@
 main {
-    background-image: url('../assets/connexionbackg.jpg');
+    background-image: url('../assets/profilbackg.jpg');
     background-size:cover;
     background-repeat: no-repeat;
     color: white;
     padding-top:0px;
-    padding-bottom:100px;
+    padding-bottom:150px;
+    height:100vh;
     
 
    
@@ -20,12 +21,12 @@ main {
 .titre {
     font-family: Oleo Script Swash Caps;
     font-size: 65px;
-    margin-bottom:20px;
+    margin-bottom:10px;
 }
 
 .intro {
     font-family: Lobster;
-    font-size:24px;
+    font-size:26px;
     margin-bottom:20px;
    
     
@@ -36,19 +37,31 @@ p {
     font-size:18px;
 }
 
-
-.styleform {
-    margin:auto;
-    
+.boxmodif {
+    margin: auto;
+    display:flex;
+    flex-direction:row;
+    justify-content: space-between;
 }
 
-#connexion {
-    position:relative;
-    left:45px;
+
+
+#openlogin {
+    width:300px;
 }
 
-.formerror {
-    margin:auto;
+
+#loginstyle {
+    margin-right:300px;
+}
+
+#mdpstyle {
+    margin-left:350px;
+}
+
+
+#openmdp {
+    width:300px;
 }
 
 
