HEADER => ADAPTATION AUX SESSIONS OK

--- a/css/header.css
+++ b/css/header.css
@@ -34,7 +34,28 @@ header {
 }
 
 .hbuttons {
-    margin-right:30%;
+    margin-right: 50%;
+}
+
+/* BOX SESSION LOGIN */
+
+
+.sessionlog {
+    background-color:white;
+    border:3px orange solid;
+    height:80px;
+    width:150px;
+    font-size:14px;
+    position:relative;
+    bottom:30px;
+    padding:5px;
+    border-radius:10%;
+
+}
+
+.lienlog {
+    text-decoration:none;
+    color: orange;
 }
 
 
@@ -48,7 +69,6 @@ header {
 
 .dropbtn {
     
-    color: white;
     height: 65px;
     width: 65px;
     border: none;
@@ -66,10 +86,6 @@ header {
     
 }
 
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
-}
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -82,17 +98,19 @@ header {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color:black;
+    box-shadow: 0px 8px 16px 0px orange;
+    width:120px;
+    
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+    color: orange;
+    padding: 10px 14px;
     text-decoration: none;
     display: block;
+    width:120px;
 }
 
 /* Change color of dropdown links on hover */
