--- a/css/header.css
+++ b/css/header.css
@@ -92,6 +92,7 @@ header {
     position: relative;
     display: inline-block;
     
+    
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -101,6 +102,7 @@ header {
     background-color:black;
     box-shadow: 0px 8px 16px 0px orange;
     width:120px;
+    border-radius:10%;
     
 }
 
