--- a/css/inscription.css
+++ b/css/inscription.css
@@ -37,4 +37,23 @@ p {
     font-size:18px;
 }
 
+/* BOX REGLES */
 
+.boxregles {
+    height:100px;
+    width:90%;
+    border-radius: 10%;
+    font-family: Abril Fatface;
+    font-size:13px;
+    position:relative;
+    right:6%;
+    margin-top:-20px;
+    
+
+}
+
+ul {
+    list-style-type: none;
+    color: orange;
+    
+}
