--- a/css/commentaire.css
+++ b/css/commentaire.css
@@ -5,8 +5,9 @@ main {
     color: white;
     padding-top:0px;
     padding-bottom:150px;
-    height:100vh;
-    margin-top:-60px;
+    margin-top:-30px;
+    height: 100vh;
+    
     
 
    
@@ -17,7 +18,6 @@ main {
     text-align:right;
     padding-right:15%;
     position:relative;
-    top:10%;
     justify-content: left;
 }
 
@@ -52,6 +52,15 @@ input[name='commenter'] {
     font-family:Abril Fat face;
     font-weight:600;
     
+}
+
+.erreur {
+    text-align:right;
+    position:relative;
+    justify-content: left;
+    top:200px;
+    font-family: Lobster;
+    font-size:26px;
 }
 
 
