--- a/css/forms.css
+++ b/css/forms.css
@@ -1,4 +1,7 @@
-
+body {
+    margin: 0px;
+    padding: 0px;
+}
 
 .submitbtn {
     background-color:orange;
@@ -32,6 +35,7 @@
 .styleform {
     margin-bottom:5%;
     
+    
 
     
 }
@@ -59,9 +63,8 @@
 
 .styleform input{
     display: block;
-    margin-bottom: 10px;
     text-align: center;
-    margin-top:5px;
+    margin-top:10px;
     margin-bottom:10px;
     height:40px;
     width:220px;
@@ -91,7 +94,41 @@
 .formerror {
     color:red;
     font-family:Abril Fatface;
-    font-size:16px;
-    margin:auto;
+    margin-top:10px;
+    margin-bottom:30px;
+    height:20px;
+    width:220px;
+    font-size:15px;
 }
+
+.reglesmodif {
+    color:orange;
+    font-family:Abril Fatface;
+    margin-top:10px;
+    margin-bottom:30px;
+    height:20px;
+    width:300px;
+    font-size:15px;
+    text-align:left;
+
+}
+
+#passformstyle {
+    position:relative;
+    left:75px;
+
+}
+
+#butmdp {
+    position:relative;
+    left:78px;
+}
+
+#mdprules {
+    text-align:right;
+    position:relative;
+    right:75px;
+}
+
+
     
