--- a/css/commentaire.css
+++ b/css/commentaire.css
@@ -5,7 +5,7 @@ main {
     color: white;
     padding-top:0px;
     padding-bottom:150px;
-    margin-top:-30px;
+    margin-top:-60px;
     height: 100vh;
     
     
@@ -19,6 +19,7 @@ main {
     padding-right:15%;
     position:relative;
     justify-content: left;
+    top:150px;
 }
 
 .titre {
@@ -51,6 +52,7 @@ input[name='commenter'] {
     border-radius:20%;
     font-family:Abril Fat face;
     font-weight:600;
+    margin-bottom: -30px;
     
 }
 
