--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,7 @@ header {
     width:100%;
     display:flex;
     flex-direction:row;
-    height:160px;
+    height:170px;
     margin-bottom:0px;
 }
 
@@ -53,6 +53,8 @@ header {
     bottom:30px;
     padding:5px;
     border-radius:10%;
+    font-family: Abril Fatface;
+    font-weight:500;
 
 }
 
