--- a/css/livre-or.css
+++ b/css/livre-or.css
@@ -44,6 +44,7 @@ p {
     padding-left:40%;
 }
 
+
 .cadre-table-scroll {
     display: inline-block;
     height: 30em;
@@ -56,18 +57,16 @@ p {
     font-size:15px;
     border-radius:2%;
     margin-bottom: 30px;
+    width:80%;
+    scrollbar-width: none;
     
     
 }
 
-.table-scroll thead th {
-    position: sticky;
-    top: 0;
-}
-
-.table-scroll tfoot td {
-    position: sticky;
-    bottom: 0;
+.tablescroll {
+    position:absolute;
+    padding-right:60px;
+    
 }
 
 .table-scroll tr {
@@ -79,4 +78,5 @@ p {
     border:1px solid black;
     margin-bottom:15px;
     padding:4px;
+    
 }
